# asciitrekpaper

./: .gitattributes  .gitignore  ARCHITECTURE.md  FIDELITY.md  README.md  gradle.properties  settings.gradle
.github/workflows/: android.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/perl/Asciitrek/: Engine.pm
app/src/main/cpp/: CMakeLists.txt  asciitrek_jni.c
app/src/main/java/com/voidnullvalue/asciitrekpaper/: AsciiCanvasRenderer.java  AsciitrekWallpaperService.java  MainActivity.java  NativeAsciitrek.java  PerlAssets.java
app/src/main/res/drawable/: app_icon.xml  wallpaper_thumbnail.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: asciitrek_wallpaper.xml
native/: build_perl_android.sh  perl-no-locale.patch
t/: embedded-assets.t  engine.t
tools/: preview.pl
